--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
     <h1>Стів Джобс</h1>
+         <img src="https://www.5.ua/media/pictures/original/84713.jpg?t=1668502894">
     <p>Сти́вен Пол (Стив) Джобс (англ. Steven Paul (Steve) Jobs, имя при рождении — Абдул Латиф Джандали[5]; 24 февраля 1955, Сан-Франциско, Калифорния, США — 5 октября 2011, Пало-Алто, Санта-Клара, Калифорния, США) — американский предприниматель, изобретатель и промышленный дизайнер, получивший широкое признание в качестве пионера эры информационных технологий[6][7]. Один из основателей, председатель совета директоров и CEO корпорации Apple. Один из основателей и CEO киностудии Pixar.
 
 В конце 1970-х годов Стив Джобс и его друг Стив Возняк разработали один из первых персональных компьютеров, обладавший большим коммерческим потенциалом. Компьютер Apple II стал первым массовым продуктом компании Apple, созданной по инициативе Стива Джобса. Позже Джобс увидел коммерческий потенциал графического интерфейса, управляемого мышью, что привело к появлению компьютеров Apple Lisa и, год спустя, Macintosh (Mac).
